# create-chain-substrate-rust

./: .dockerignore  .gitignore  CARGO_MIRROR_CONFIG.md  CI_CD_SETUP.md  Cargo.toml  DEPLOY_TO_SERVER.md  DOCKER_USAGE.md  Dockerfile  GITHUB_ACTIONS_TROUBLESHOOTING.md  POLKADOT_SDK_USAGE.md  README.md  RUST_VERSION_UPGRADE.md  SETUP_NEW_PROJECT.md  SSH_CONFIG_GUIDE.md  TROUBLESHOOTING.md  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-only.yml  ci.yml  deploy.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: deploy.sh
