[workspace.package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
repository = "https://github.com/paritytech/polkadot-sdk"
version = "0.0.0"

[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/template",
]

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }
useless_deprecated = { level = "allow", priority = 2 }
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(build_opt_level, values("3"))',
    'cfg(build_profile, values("debug", "release"))',
    'cfg(enable_alloc_error_handler)',
    'cfg(fuzzing)',
    'cfg(ignore_flaky_test)',
    'cfg(substrate_runtime)',
] }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }

[workspace.dependencies]
polkadot-sdk = { version = "2512.1", default-features = false }
clap = { version = "4.5", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
docify = "0.1"
futures = { version = "0.3", default-features = false, features = ["thread-pool"] }
futures-timer = "3.0"
jsonrpsee = { version = "0.20", default-features = false, features = ["server"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

